.metadata/.plugins/org.eclipse.cdt.ui/Kontrol2.build.log
11:24:21 **** Incremental Build of configuration Debug for project Kontrol2 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:84:23: error: expected declaration specifiers or '...' before '&' token
   84 |   uint8_t as5600_init(&handle);
      |                       ^
make: *** [Core/Src/subdir.mk:55: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

11:24:21 Build Failed. 2 errors, 0 warnings. (took 459ms)

